dev-ops/kubernetes/v2/hi-service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hi-v2
  name: hi-v2
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hi-v2
  type: ClusterIP
