dev-ops/kubernetes/v2/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hi-ingress
spec:
  rules:
  - host: hi.172.17.136.154.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: hi-v2
          servicePort: 8080
